Console flatpak app: window is not shown when clicking on the Launch button in the App Center (Gnome Software)
Hi,
This bug is related to Flatpak app https://flathub.org/apps/details/org.linux_hardware.hw-probe (Hardware Probe). This is a console app with Terminal=true in desktop file.
Profile: https://github.com/linuxhw/org.linux_hardware.hw-probe/blob/master/org.linux_hardware.hw-probe.yaml
Desktop file: https://github.com/linuxhw/hw-probe/tree/master/flatpak
Tested on Endless OS. All is OK when launching by clicking on the installed desktop icon: the console window is shown and probe is created. But console window is not shown when clicking the Launch button in the App Center aka Gnome Software (probe is still created per each click). For this reason some users trying to click 10 times and more on this button generating 10 and more equal hardware probes without a visible result. This gives the impression of non-working app.
How to show console window when clicking on the Launch button in the Gnome Software?
Thank you.