flatpak: Launch apps via GAppInfo and the desktop file

Avoid directly using flatpak_installation_launch() and instead switch to
g_app_info_launch() so that we get a new terminal window for command
line apps.

Fixes: https://gitlab.gnome.org/GNOME/gnome-software/issues/552